umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_fe-c5h5n-6.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 67
bond_count: 72
sum_formula: C30H30FeN6
graph6: ~?@BiPA??GA?A_KC?G?C???A??G???C??C????D??@_G??????C?????_@????o????_???A?????????g????o?????@????G????@??B??????A?A?O?????C??????_?????A??????C??????C??????A???????_??????C???????O???????_???????_???????O???????C????????_???????A????????C????????C????????A?????????_????????C?????????O?????????_?????????_?????????O?????????C??????????_?????????A??????????C??????????C?????
