umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_genfag.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 60
bond_count: 60
sum_formula: C18H36N6
graph6: "{sO___GA?G?_?_?_?O?A??O?@??@??@???_??C???_??A???A???A???@????G???@????C??A????@?????????B?????_????A?????C?????C?????C?????@??????O?????@??????C??????C??????C??????A???????O??????A???????G???????G???????G???????C????????_???????C????????O????????O????????O????????G????????@?????????G?????????_??"
