umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_ozihel.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 9
bond_count: 21
sum_formula: Ge9
graph6: "H{tdiwV"
