umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_p_dodecahedron.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 30
sum_formula: C20
graph6: SpCGGD@aQ??@GA??a?GG@??CA?G@GG?IO
