umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_qaqzud.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 66
bond_count: 72
sum_formula: C30H36
graph6: "~?@AhEK?COO??`?G???__?C??_?@??A??@???_??C???_??@???A???@????_???C????_???@????A????@?????_???O?????????_????@?????@??????_?????G?????P?A????C??????G??????O?A???@???????@???????O?????A??C?????@???????@???????@???????@????????O??????_???C??????G????????G????????G????????G????????A??????G?????C??????@?????????@?????????@?????????@??????????O?????C??????????O?????"
